# switchboard

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  build.rs  rust-toolchain.toml
.github/: copilot-instructions.md
.squad/: .first-run  routing.md  team.md
.squad/agents/elaine/: charter.md
.squad/agents/george/: charter.md
.squad/agents/jerry/: charter.md  test-architecture.md
.squad/agents/kramer/: charter.md
.squad/agents/newman/: charter.md
.squad/agents/peterman/: charter.md
.squad/agents/ralph/: charter.md
.squad/agents/scribe/: charter.md
.squad/archive/: 2026-04-21-jerry-v01-code-review.md  decisions-2026-04-22T18-19-49Z.md  decisions-archive-2026-04-22T23-55-00Z.md
.squad/casting/: history.json  policy.json  registry.json
.squad/files/diagnoses/: 2026-04-22-login-screen-and-tray-state.md
.squad/files/icon-concepts/: README.md  final-icon.html  preview.html  (+1 more)
.squad/identity/: history.md  now.md  wisdom.md
.squad/skills/: rust-bounded-join-panic-abort.md  setupapi-enumeration-rust.md  system-tray-safety-test-template.md  win-silent-logon-elevation.md  windows-hidden-message-window.md  windows-lparam-box-pattern.md  windows-session-notifications.md  winrt-event-raii.md
docker/: Dockerfile.build
manifest/: switchboard.exe.manifest  switchboard.rc
scripts/: build-icons.sh  build.ps1  build.sh  register-recovery-task.ps1  release.ps1  release.sh  unregister-recovery-task.ps1
src/: autostart.rs  ble.rs  boot_task.rs  device.rs  main.rs  theme.rs
(+20 files in other folders)
